welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:6: error: ';' expected but 'true' found.
      retun true
            ^